--- a/gtk-3.0/_common.scss
+++ b/gtk-3.0/_common.scss
@@ -1896,6 +1896,11 @@ notebook {
     border-color: $borders_color;
     border-width: 0;
     background-color: darken($bg_color, 5%);
+    
+    // FIXME: Make it work for bottom, left, right tabs as well.
+    box-shadow: inset 0 -1px $borders_color,
+                inset 0 2px transparentize(black, 0.98),
+                inset 0 1px transparentize(black, 0.96);
 
     &.top, &.bottom { padding-left: 0; padding-right: 0; }
     &.left, &.right { padding-top: 0; padding-bottom: 0; }
