--- a/gtk-3.0/gtk-contained-dark.css
+++ b/gtk-3.0/gtk-contained-dark.css
@@ -707,7 +707,7 @@ popover.background list separator { margin: 0px; }
 /***************** Notebooks and * Tabs          * */
 notebook { padding: 0; }
 
-notebook > header { padding: 0; border-color: #101010; border-width: 0; background-color: #292929; }
+notebook > header { padding: 0; border-color: #101010; border-width: 0; background-color: #292929; box-shadow: inset 0 -1px #101010, inset 0 2px rgba(0, 0, 0, 0.02), inset 0 1px rgba(0, 0, 0, 0.04); }
 
 notebook > header.top, notebook > header.bottom { padding-left: 0; padding-right: 0; }
 
