Cleaner tab code

--- a/gtk-3.0/_drawing.scss
+++ b/gtk-3.0/_drawing.scss
@@ -534,82 +534,66 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   box-shadow: none;
 }
 
-@mixin tabhead {
-  @each $po in (top), (right), (bottom), (left) {
-    $_tabbar: null;
-    @if $po == top {
-      $_tabbar: inset 0 -1px $borders_color,
-                inset 0 2px transparentize(black, 0.98),
-                inset 0 1px transparentize(black, 0.96);
-    }
-    @else if $po == left {
-      $_tabbar: inset -1px 0 $borders_color,
-                inset 2px 0 transparentize(black, 0.98),
-                inset 1px 0 transparentize(black, 0.96);
-    }
-    @else if $po == right {
-      $_tabbar: inset 1px 0 $borders_color,
-                inset -2px 0 transparentize(black, 0.98),
-                inset -1px 0 transparentize(black, 0.96);
-    }
-    @else if $po == bottom {
-      $_tabbar: inset 0 1px $borders_color,
-                inset 0 -2px transparentize(black, 0.98),
-                inset 0 -1px transparentize(black, 0.96);
-    }
-    
-    &.#{$po} { box-shadow: $_tabbar; }
-  }
-}
-
-@mixin tabs {
+// Tabs
+@mixin tabs($th: null, $bh: null, $ba: null, $sa: transparentize(black, 0.98), $sb: transparentize(black, 0.96)) {
   //
   // Tabs
   //
   // $po = position
-  // $_bs_hover/active = hovered and active tab box shadow
+  // $th = tab header box shadow
+  // $bh = hovered tab box shadow
+  // $ba = active tab box shadow
+  // $sa = header large inner shadow
+  // $sb = header small inner shadow
   //
 
   @each $po in (top), (right), (bottom), (left) {
-    $_bs_hover: null;
-    $_bs_active: null;
     @if $po == top {
-      $_tabbar: inset 0 -1px $borders_color,
-                inset 0 2px transparentize(black, 0.98),
-                inset 0 1px transparentize(black, 0.96);
-      $_bs_hover: inset 0 -3px $borders_color;
-      $_bs_active: inset 0 -3px $selected_bg_color;
+      $th: inset 0 -1px $borders_color,
+                inset 0 2px $sa,
+                inset 0 1px $sb;
+      $bh: inset 0 -3px $borders_color;
+      $ba: inset 0 -3px $selected_bg_color;
     }
     @else if $po == left {
-      $_tabbar: inset -1px 0 $borders_color,
-                inset 2px 0 transparentize(black, 0.98),
-                inset 1px 0 transparentize(black, 0.96);
-      $_bs_hover: inset -3px 0 $borders_color;
-      $_bs_active: inset -3px 0 $selected_bg_color;
+      $th: inset -1px 0 $borders_color,
+                inset 2px 0 $sa,
+                inset 1px 0 $sb;
+      $bh: inset -3px 0 $borders_color;
+      $ba: inset -3px 0 $selected_bg_color;
     }
     @else if $po == right {
-      $_tabbar: inset 1px 0 $borders_color,
-                inset -2px 0 transparentize(black, 0.98),
-                inset -1px 0 transparentize(black, 0.96);
-      $_bs_hover: inset 3px 0 $borders_color;
-      $_bs_active: inset 3px 0 $selected_bg_color;
+      $th: inset 1px 0 $borders_color,
+                inset -2px 0 $sa,
+                inset -1px 0 $sb;
+      $bh: inset 3px 0 $borders_color;
+      $ba: inset 3px 0 $selected_bg_color;
     }
     @else if $po == bottom {
-      $_tabbar: inset 0 1px $borders_color,
-                inset 0 -2px transparentize(black, 0.98),
-                inset 0 -1px transparentize(black, 0.96);
-      $_bs_hover: inset 0 3px $borders_color;
-      $_bs_active: inset 0 3px $selected_bg_color;
+      $th: inset 0 1px $borders_color,
+                inset 0 -2px $sa,
+                inset 0 -1px $sb;
+      $bh: inset 0 3px $borders_color;
+      $ba: inset 0 3px $selected_bg_color;
     }
 
+    padding: 0;
+    border-color: $borders_color;
+    border-width: 0;
+    background-color: darken($bg_color, 5%);
+
+    &.#{$po} {
+       box-shadow: $th;
+    }
+    
     &.#{$po} {
       > tabs {
         > tab {
-          &:hover { box-shadow: $_bs_hover; }
+          &:hover { box-shadow: $bh; }
           &:checked, &:checked:hover {
             background-color: $bg_color;
             border-width: 0;
-            box-shadow: $_bs_active;
+            box-shadow: $ba;
           }
         }
       }
@@ -619,6 +603,11 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
       border-style: none;
       @if ($po == top) or ($po == bottom) { @extend %notebook_vert_arrows; }
       @if ($po == left) or ($po == right) { @extend %notebook_horz_arrows; }
+    }
+    
+    &.#{$po} {
+      @if ($po == top) or ($po == bottom) { padding-left: 0; padding-right: 0; }
+      @if ($po == left) or ($po == right) { padding-top: 0; padding-bottom: 0; }
     }
   }
 }
