--- a/gtk-3.0/_common.scss
+++ b/gtk-3.0/_common.scss
@@ -1892,20 +1892,10 @@ notebook {
   padding: 0;
 
   > header {
-    padding: 0;
-    border-color: $borders_color;
-    border-width: 0;
-    background-color: darken($bg_color, 5%);
-    
-    // Tab header bar box shadows
-    @include tabhead;
-
-    &.top, &.bottom { padding-left: 0; padding-right: 0; }
-    &.left, &.right { padding-top: 0; padding-bottom: 0; }
+    // Style common tabs in _drawing.scss
+    @include tabs;
 
     tabs { margin: 0px; }
-
-    @include tabs;
 
     @at-root %notebook_vert_arrows {
       margin-left: -5px;
@@ -1914,7 +1904,6 @@ notebook {
       padding-right: 4px;
 
       &.down { -gtk-icon-source: -gtk-icontheme('pan-start-symbolic'); }
-
       &.up { -gtk-icon-source: -gtk-icontheme('pan-end-symbolic'); }
     }
 
@@ -1925,13 +1914,11 @@ notebook {
       padding-bottom: 4px;
 
       &.down { -gtk-icon-source: -gtk-icontheme('pan-up-symbolic'); }
-
       &.up { -gtk-icon-source: -gtk-icontheme('pan-down-symbolic'); }
     }
 
     > tabs > arrow {
       @extend %button_basic;
-
       @extend %button_basic.flat;
 
       min-height: 16px;
