--- a/gtk-3.0/gtk-contained.css
+++ b/gtk-3.0/gtk-contained.css
@@ -715,7 +715,7 @@ popover.background list separator { margin: 0px; }
 /***************** Notebooks and * Tabs          * */
 notebook { padding: 0; }
 
-notebook > header { padding: 0; border-color: #c5c0c0; border-width: 0; background-color: #dedbdb; padding: 0; border-color: #c5c0c0; border-width: 0; background-color: #dedbdb; padding: 0; border-color: #c5c0c0; border-width: 0; background-color: #dedbdb; padding: 0; border-color: #c5c0c0; border-width: 0; background-color: #dedbdb; }
+notebook > header { padding: 0; border-color: #c5c0c0; border-width: 0; background-color: #dedbdb; }
 
 notebook > header.top { box-shadow: inset 0 -1px #c5c0c0, inset 0 2px rgba(0, 0, 0, 0.02), inset 0 1px rgba(0, 0, 0, 0.04); }
 
