--- a/gtk-3.0/_drawing.scss
+++ b/gtk-3.0/_drawing.scss
@@ -115,9 +115,9 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
 
 // These shadows acts like borders on the buttons
 @mixin btn-shadow($state: normal) {
-  $sc: transparentize(black, 0.88); // main shadow
-  $scb: transparentize(black, 0.8); // bottom shadow (should be a little bit more intense)
-  $sch: transparentize(white, 0.88); // top hilight
+  $sc: transparentize(black, 0.94); // main shadow
+  $scb: transparentize(black, 0.92); // bottom shadow (should be a little bit more intense)
+  $sch: transparentize(white, 0.94); // top hilight
   $scf: $selected_bg_color; // focus shadow
 
   @if $state == normal {
@@ -129,7 +129,7 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
       inset 0 1px $sch;
   }
   @else if $state == active {
-    box-shadow: inset 0 0 0 1px transparentize(black, 0.8);
+    box-shadow: inset 0 0 0 1px transparentize(black, 0.9);
   }
   @else if $state == focus {
     box-shadow: 1px 0 $sc,
@@ -175,6 +175,9 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
     outline-color: transparentize($tc, 0.7);
     background-color: lighten($c, 5%);
     @include btn-shadow(normal);
+    border-color: $btn-border;
+    border-bottom-color: darken($borders_color, 5%);
+    border-width: 1px;
   }
   @if $t==normal-alt {
   // normal button alternative look
@@ -248,6 +251,7 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
     border-color: $dark_borders_color;
     background-color: lighten($dc, 10%);
     @include btn-shadow();
+    border-width: 1px;
   }
   @else if $t==headerbutton-hover {
   // hovered header button
@@ -277,9 +281,11 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   }
   @else if $t==headerbutton-disabled {
   // disabled header button
+    border-color: transparentize($dark_borders_color, 0.6);
     background-color: $dc;
     color: if($tc!=$fg_color, mix($tc, $_bg, 50%), $insensitive_fg_color);
-    @include btn-shadow(disabled);
+    box-shadow: none;
+    //@include btn-shadow(disabled);
   }
 
   // osd buttons
