--- a/gtk-3.0/_drawing.scss
+++ b/gtk-3.0/_drawing.scss
@@ -250,14 +250,15 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
     outline-color: transparentize($tc, 0.7);
     border-color: $dark_borders_color;
     background-color: lighten($dc, 10%);
-    @include btn-shadow();
+    @include btn-shadow(normal);
     border-width: 1px;
   }
   @else if $t==headerbutton-hover {
   // hovered header button
     color: $dfc;
-    border-color: $selected_bg_color;
+    border-color: $dark_borders_color;
     background-color: lighten($dc, 14%);
+    @include btn-shadow(focus);
   }
   @else if $t==headerbutton-active {
   // active header button
@@ -276,7 +277,7 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   @else if $t==headerbutton-focus {
   // focus header button
     color: $dfc;
-    border-color: $selected_bg_color;
+    border-color: $dark_borders_color;
     @include btn-shadow(focus);
   }
   @else if $t==headerbutton-disabled {
@@ -285,7 +286,6 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
     background-color: $dc;
     color: if($tc!=$fg_color, mix($tc, $_bg, 50%), $insensitive_fg_color);
     box-shadow: none;
-    //@include btn-shadow(disabled);
   }
 
   // osd buttons
@@ -293,7 +293,6 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   // normal osd button
     $_bg: if($c!=$bg_color, transparentize($c, 0.5),
                             $osd_bg_color);
-
     color: $osd_fg_color;
     border-color: $osd_borders_color;
     background-image: image($_bg);
@@ -307,7 +306,6 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   // active osd button
     $_bg: if($c!=$bg_color, transparentize($c, 0.3),
                             lighten($osd_bg_color, 12%));
-
     color: white;
     border-color: $osd_borders_color;
     background-image: image($_bg);
@@ -320,7 +318,6 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   @else if $t==osd-active {
   // active osd button
     $_bg: if($c!=$bg_color, $c, $osd_borders_color);
-
     color: white;
     border-color: $osd_borders_color;
     background-image: image($_bg);
