--- a/gtk-3.0/_drawing.scss
+++ b/gtk-3.0/_drawing.scss
@@ -113,7 +113,7 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   @else { @return darken($c, 20%); }
 }
 
-// These shadows acts like borders on the buttons
+// Buttons shadows
 @mixin btn-shadow($state: normal) {
   $sc: transparentize(black, 0.94); // main shadow
   $scb: transparentize(black, 0.92); // bottom shadow (should be a little bit more intense)
@@ -121,12 +121,27 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   $scf: $selected_bg_color; // focus shadow
 
   @if $state == normal {
-    box-shadow: 1px 0 $sc,
+    box-shadow: 1px 0 $sc,  // Right
+      0 1px $scb,           // Bottom stronger shadow
+      0 2px $sc,            // Bottom
+      -1px 0 $sc,           // Left
+      0 -1px $sc,           // Top
+      inset 0 1px $sch;     // Top hilight
+      //box-shadow: 0 1px 2px 0 transparentize(black, 0.7);
+  }
+  @else if $state == hover {
+    box-shadow: 1px 0 $scb,
       0 1px 1px $scb,
-      0 2px $sc,
-      -1px 0 $sc,
-      0 -1px $sc,
-      inset 0 1px $sch;
+      0 2px $scb,
+      -1px 0 $scb,
+      0 -1px $scb,
+      inset 0 1px $sch,
+      // Make the shadow more intense when hovered
+      2px 0 $sc,
+      0 1px $sc,
+      -2px 0 $sc,
+      0 -2px $sc;
+      //box-shadow: 0 1px 3px 0 transparentize(black, 0.5);
   }
   @else if $state == active {
     box-shadow: inset 0 0 0 1px transparentize(black, 0.9);
@@ -176,31 +191,29 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
     background-color: lighten($c, 5%);
     @include btn-shadow(normal);
     border-color: $btn-border;
-    border-bottom-color: darken($borders_color, 5%);
+    border-bottom-color: darken($borders_color, 25%);
     border-width: 1px;
   }
   @if $t==normal-alt {
   // normal button alternative look
     @include button(normal);
   }
-
   @else if $t==hover {
   // hovered button
     color: $tc;
     background-color: if($variant == 'light', lighten($c, 8%), lighten($c, 14%));
-    border-color: if($variant == 'light', $selected_bg_color, $btn-border);
+    border-color: if($variant == 'light', darken($btn-border, 10%), $btn-border);
+    @include btn-shadow(hover);
   }
   @else if $t==hover-alt {
   // hovered alt button
     @include button(hover);
   }
-  
   @else if $t==focus {
   // focused button
     color: $tc;
     @include btn-shadow(focus);
   }
-
   @else if $t==active {
   // pushed button
     color: $tc;
