--- a/gtk-3.0/_colors.scss
+++ b/gtk-3.0/_colors.scss
@@ -50,7 +50,7 @@ $drop_target_color: #4e9a06;
 
 //insensitive state derived colors
 $insensitive_fg_color: mix($fg_color, $bg_color, 50%);
-$insensitive_bg_color: mix($bg_color, $base_color, 60%);
+$insensitive_bg_color: mix($bg_color, $fg_color, 90%);
 $insensitive_borders_color: $borders_color;
 
 //colors for the backdrop state, derived from the main colors.
