--- a/gtk-3.0/_common.scss
+++ b/gtk-3.0/_common.scss
@@ -9,7 +9,7 @@ $button_transition: all 200ms $ease-out-quad;
 
 // Button and window border-radius
 $br_b: 3px; // Default button and entry radius
-$br_w: 4px; // Rounded corners on decorations
+$br_w: 2px; // Rounded corners on decorations
 
 * {
   padding: 0;
@@ -463,7 +463,7 @@ button {
     min-height: 20px;
     min-width: 16px;
     padding: 4px 4px;
-    border: 0px solid;
+    border: 1px solid;
     border-radius: $br_b;
 
     @include button(normal);
@@ -1393,6 +1393,7 @@ headerbar {
   // Normal headerbar buttons
   button {
     color: $dark_fg_color;
+    border-width: 0;
     @include button(headerbutton-normal);
     &:hover { @include button(headerbutton-hover); }
     &:focus { @include button(headerbutton-focus); }
@@ -2818,6 +2819,7 @@ levelbar {
     padding: 2px;
     border-radius: 0;
     @include entry(normal);
+    box-shadow: none;
   }
 
   &.horizontal.discrete block { margin: 0 1px; }
