--- a/gtk-3.0/_drawing.scss
+++ b/gtk-3.0/_drawing.scss
@@ -1,5 +1,4 @@
 // Drawing mixins
-
 // generic drawing of more complex things
 
 @function _widget_edge($c:$borders_edge) {
@@ -54,17 +53,18 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   @if $t==normal {
     color: $text_color;
     border-color: $borders_color;
+    border-bottom-color: darken($borders_color, 15%);
     background-color: $base_color;
-    box-shadow: $entry_inner_shadow;
+    @include edges(normal);
   }
   @if $t==focus {
-    border-color: entry_focus_border($fc);
-    box-shadow: entry_focus_shadow($fs);
+    @include edges(focus);
   }
   @if $t==insensitive {
     color: $insensitive_fg_color;
-    border-color: $borders_color;
     background-color: $insensitive_bg_color;
+    border-color: transparent;
+    box-shadow: none;
   }
   @if $t==osd {
     color: $osd_text_color;
@@ -114,48 +114,49 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
 }
 
 // Buttons shadows
-@mixin btn-shadow($state: normal) {
-  $sc: transparentize(black, 0.94); // main shadow
-  $scb: transparentize(black, 0.92); // bottom shadow (should be a little bit more intense)
-  $sch: transparentize(white, 0.94); // top hilight
-  $scf: $selected_bg_color; // focus shadow
+@mixin edges($s: normal, $c:$bg_color) {
+  $b: if($c!=$bg_color, _border_color($c), darken($borders_color, 8%));
+  $bs1: transparentize(black, 0.78);
+  $bs2: transparentize(black, 0.94);
+  $bsh1: transparentize(black, 0.75);
+  $bsh2: transparentize(black, 0.78);
+  $bsa1: transparentize(black, 0.92);
+  $bsa2: transparentize(black, 0.96);
 
-  @if $state == normal {
-    box-shadow: 1px 0 $sc,  // Right
-      0 1px $scb,           // Bottom stronger shadow
-      0 2px $sc,            // Bottom
-      -1px 0 $sc,           // Left
-      0 -1px $sc,           // Top
-      inset 0 1px $sch;     // Top hilight
-      //box-shadow: 0 1px 2px 0 transparentize(black, 0.7);
+  @if $s == normal {
+    box-shadow: 0 1px 2px $bs1, 0 1px 1px $bs2;
+    border-color: $b;
+    border-bottom-color: darken($b, 15%);
   }
-  @else if $state == hover {
-    box-shadow: 1px 0 $scb,
-      0 1px 1px $scb,
-      0 2px $scb,
-      -1px 0 $scb,
-      0 -1px $scb,
-      inset 0 1px $sch,
-      // Make the shadow more intense when hovered
-      2px 0 $sc,
-      0 1px $sc,
-      -2px 0 $sc,
-      0 -2px $sc;
-      //box-shadow: 0 1px 3px 0 transparentize(black, 0.5);
+  @else if $s == normal-dark {
+    box-shadow: 0 1px 2px $bs1, 0 1px 1px $bs2;
+    border-color: transparent;
   }
-  @else if $state == active {
-    box-shadow: inset 0 0 0 1px transparentize(black, 0.9);
+  @else if $s == hover {
+    box-shadow: 0 2px 4px $bsh1, 0 2px 2px $bsh2;
   }
-  @else if $state == focus {
-    box-shadow: 1px 0 $sc,
-      0 1px 1px $scb,
-      0 2px $sc,
-      -1px 0 $sc,
-      0 -1px $sc,
-      inset 0 0 0 1px $scf;
+  @else if $s == hover-dark {
+    box-shadow: 0 2px 4px $bsh1, 0 2px 2px $bsh2;
   }
-  @else if $state == disabled {
-    box-shadow: inset 0 0 0 1px transparentize(black, 0.9);
+  @else if $s == active {
+    box-shadow: inset 0 0 0 1px $bsa1, inset 0 2px $bsa2;
+    border-color: $b;
+    border-bottom-color: $b;
+    border-top-color: darken($b, 15%);
+  }
+  @else if $s == active-dark {
+    box-shadow: inset 0 0 0 1px $bsa1, inset 0 2px $bsa2, inset 0 -3px $selected_bg_color;
+    border-color: transparent;
+  }
+  @else if $s == focus {
+    border-color: $selected_bg_color;
+  }
+  @else if $s == focus-dark {
+    border-color: $selected_bg_color;
+  }
+  @else if $s == disabled {
+    box-shadow: none;
+    border-color: transparent;
   }
 }
 
@@ -177,10 +178,6 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
 // backdrop, backdrop-active, backdrop-insensitive, backdrop-insensitive-active,
 // osd, osd-hover, osd-active, osd-insensitive, osd-backdrop, undecorated
 //
-
-  // Border colors
-  $btn-border: if($c!=$bg_color, _border_color($c), darken($borders_color, 12%));
-
   $_button_edge: if($edge == none, none, _widget_edge($edge));
   $_blank_edge: if($edge == none, none, _widget_edge(transparentize($edge, 1)));
 
@@ -188,11 +185,8 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   // normal button
     color: $tc;
     outline-color: transparentize($tc, 0.7);
-    background-color: lighten($c, 5%);
-    @include btn-shadow(normal);
-    border-color: $btn-border;
-    border-bottom-color: darken($borders_color, 25%);
-    border-width: 1px;
+    background-color: lighten($c, 10%);
+    @include edges(normal);
   }
   @if $t==normal-alt {
   // normal button alternative look
@@ -201,9 +195,8 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   @else if $t==hover {
   // hovered button
     color: $tc;
-    background-color: if($variant == 'light', lighten($c, 8%), lighten($c, 14%));
-    border-color: if($variant == 'light', darken($btn-border, 10%), $btn-border);
-    @include btn-shadow(hover);
+    background-color: if($variant == 'light', lighten($c, 15%), lighten($c, 18%));
+    @include edges(hover);
   }
   @else if $t==hover-alt {
   // hovered alt button
@@ -212,15 +205,14 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   @else if $t==focus {
   // focused button
     color: $tc;
-    @include btn-shadow(focus);
+    @include edges(focus);
   }
   @else if $t==active {
   // pushed button
     color: $tc;
     outline-color: transparentize($tc, 0.7);
-    border-color: $btn-border;
     background-color: darken($c, 8%);
-    @include btn-shadow(active);
+    @include edges(active);
   }
   @else if $t==hoveractive {
   // pushed hovered button
@@ -232,11 +224,10 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
     $_bg: if($c!=$bg_color, mix($c, $base_color, 85%), $insensitive_bg_color);
 
     color: if($tc!=$fg_color, mix($tc, $_bg, 50%), $insensitive_fg_color);
-    border-color: $btn-border;
     background-color: $_bg;
     text-shadow: none;
     -gtk-icon-shadow: none;
-    @include btn-shadow(disabled);
+    @include edges(disabled);
     // white with 0 alpha to avoid an ugly transition, since no color means
     // black with 0 alpha
     > .label { color: inherit; }
@@ -248,7 +239,7 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
     $_bc: if($c!=$bg_color, _border_color($c), $insensitive_borders_color);
     color: if($c!=$bg_color, mix($tc, $_bg, 60%), $insensitive_fg_color);
     border-color: $_bc;
-    @include btn-shadow(disabled);
+    @include edges(disabled);
     background-color: darken($c, 5%);
     // white with 0 alpha to avoid an ugly transition, since no color means
     // black with 0 alpha
@@ -261,44 +252,37 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   // normal header button
     color: $dfc;
     outline-color: transparentize($tc, 0.7);
-    border-color: $dark_borders_color;
-    background-color: lighten($dc, 10%);
-    @include btn-shadow(normal);
-    border-width: 1px;
+    background-color: lighten($dc, 15%);
+    @include edges(normal-dark);
   }
   @else if $t==headerbutton-hover {
   // hovered header button
     color: $dfc;
-    border-color: $dark_borders_color;
-    background-color: lighten($dc, 14%);
-    @include btn-shadow(focus);
+    background-color: lighten($dc, 18%);
+    @include edges(hover-dark);
   }
   @else if $t==headerbutton-active {
   // active header button
     color: $dfc;
-    border-color: darken($dark_borders_color, 15%);
     background-color: darken($dc, 8%);
-    @include btn-shadow(active);
+    @include edges(active-dark);
   }
   @else if $t==headerbutton-hoveractive {
   // active hovered header button
     color: $dfc;
-    border-color: darken($dark_borders_color, 15%);
     background-color: darken($dc, 12%);
-    @include btn-shadow(active);
+    @include edges(active-dark);
   }
   @else if $t==headerbutton-focus {
   // focus header button
     color: $dfc;
-    border-color: $dark_borders_color;
-    @include btn-shadow(focus);
+    @include edges(focus-dark);
   }
   @else if $t==headerbutton-disabled {
   // disabled header button
-    border-color: transparentize($dark_borders_color, 0.6);
     background-color: $dc;
     color: if($tc!=$fg_color, mix($tc, $_bg, 50%), $insensitive_fg_color);
-    box-shadow: none;
+    @include edges(disabled);
   }
 
   // osd buttons
